<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/Register_2_validName">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="5dp"
        android:text="@string/register_title"
        android:textSize="40dp"
        android:textColor="@color/myPrimaryColor"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_title_1"
            android:textSize="20dp"
            android:textColor="@color/light_gray"
            android:gravity="center"/>

        <TextView
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="  |  "
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/gray"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/phone_login"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/register_title_2"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/myPrimaryColor"
            android:textSize="20dp" />

        <TextView
            android:id="@id/divider"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="  |  "
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/gray"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/register_finish"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/register_title_3"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/light_gray"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_school"
            android:textColor="@color/myPrimaryColor"
            android:textSize="22dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginLeft="3dp">

        </Spinner>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/register_real_name"
            android:textColor="@color/myPrimaryColor"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/realname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boarder"
            android:layout_gravity="bottom"
            android:textColor="@color/myPrimaryColor"
            android:textSize="21dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/account"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:background="@drawable/boarder"
            android:inputType="text"
            android:hint="@string/register_email"
            android:textColorHint="@color/light_gray"
            android:textSize="22dp"
            />

        <TextView
            android:id="@+id/email_suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="\@XXXX.edu.cn"
            android:textColor="@color/myPrimaryColor"
            android:textSize="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/enter_validationNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/login_label_validNum"
                    android:textColor="@color/myPrimaryColor"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/validationNum_email"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textColor="@color/myPrimaryColor"
                    android:textSize="18dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/send_validationNum"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/myAccentColor"
                android:text="@string/login_button_send_validation" />

        </RelativeLayout>

        <Button
            android:id="@+id/signin_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/light_gray"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_finish"
            android:textSize="20dp"
            />

    </LinearLayout>


</LinearLayout>
